--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seneca-logentries-logger",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Seneca Logentries Logger",
   "main": "index.js",
   "precommit": "test",
@@ -21,6 +21,6 @@
     "lab": "10.9.0",
     "mock-require": "1.3.0",
     "precommit": "^1.2.2",
-    "seneca": "2.1.0"
+    "seneca": "git@github.com:senecajs/seneca.git#908dadf6454c0792c64a6b3164e672456b5e1388"
   }
 }
