--- a/package.json
+++ b/package.json
@@ -5,25 +5,29 @@
   "main": "index.js",
   "precommit": "test",
   "scripts": {
-    "test": "lab -v -L -P test -t 95",
-    "coverage": ""
+    "test": "lab -v -P test -L -t 95 $LAB_FLAGS",
+    "test:node6": "LAB_FLAGS='--leaks' && npm t",
+    "coveralls": "lab -s -P test -r lcov | coveralls",
+    "coverage": "lab -v -P test -L -t 95 -r html > coverage.html",
+    "annotate": "docco seneca.js logentries.js -o docs/annotated"
   },
   "author": "David Gonzalez",
   "license": "MIT",
   "dependencies": {
     "le_node": "1.6.0"
   },
-	"engines": {
-	"node": ">=4.x"
-},
+  "engines": {
+    "node": ">=4.x"
+  },
   "devDependencies": {
     "chai": "3.5.0",
-    "eslint-config-seneca": "^3.0.0",
-    "eslint-plugin-hapi": "^4.0.0",
-    "eslint-plugin-standard": "^2.0.0",
+    "code": "3.0.2",
+    "eslint-config-seneca": "3.0.0",
+    "eslint-plugin-hapi": "4.0.0",
+    "eslint-plugin-standard": "2.0.0",
     "lab": "10.9.0",
     "mock-require": "1.3.0",
-    "precommit": "^1.2.2",
+    "precommit": "1.2.2",
     "seneca": "git@github.com:senecajs/seneca.git#908dadf6454c0792c64a6b3164e672456b5e1388"
   }
 }
