--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
   },
   "devDependencies": {
     "chai": "3.5.0",
-    "code": "3.0.2",
-    "eslint-config-seneca": "3.0.0",
-    "eslint-plugin-hapi": "4.0.0",
-    "eslint-plugin-standard": "2.0.0",
-    "lab": "10.9.0",
+    "code": "3.0.x",
+    "eslint-config-seneca": "3.x.x",
+    "eslint-plugin-hapi": "4.x.x",
+    "eslint-plugin-standard": "2.x.x",
+    "lab": "11.0.x",
     "mock-require": "1.3.0",
-    "precommit": "1.2.2",
     "seneca": "git@github.com:senecajs/seneca.git#908dadf6454c0792c64a6b3164e672456b5e1388"
-  }
+  },
+  "pre-commit": [
+    "test",
+    "lint"
+  ]
 }
