--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "eslint-plugin-standard": "2.x.x",
     "lab": "11.0.x",
     "mock-require": "1.3.0",
-    "seneca": "git@github.com:senecajs/seneca.git#908dadf6454c0792c64a6b3164e672456b5e1388"
+    "seneca": "senecajs/seneca"
   },
   "pre-commit": [
     "test",
