Added changelog and create-a-release.md, updated package and travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ env:
 
 node_js:
   - "6"
-  - "5"
   - "4"
 
 cache:
@@ -14,4 +13,4 @@ cache:
   - node_modules
 
 after_script:
-  - npm run coverage
+  - npm run coveralls
