--- a/package.json
+++ b/package.json
@@ -27,10 +27,15 @@
     "eslint-plugin-standard": "2.x.x",
     "lab": "11.0.x",
     "mock-require": "1.3.0",
-    "seneca": "senecajs/seneca"
+    "seneca": "plugin"
   },
   "pre-commit": [
     "test",
     "lint"
+  ],
+  "files": [
+    "logentries.js",
+    "README.md",
+    "LICENSE"
   ]
 }
