--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "precommit": "test",
   "scripts": {
     "test": "lab -v -P test -L -t 95 $LAB_FLAGS",
-    "test:node6": "LAB_FLAGS='--leaks' && npm t",
     "coveralls": "lab -s -P test -r lcov | coveralls",
     "coverage": "lab -v -P test -L -t 95 -r html > coverage.html",
     "annotate": "docco seneca.js logentries.js -o docs/annotated"
@@ -27,11 +26,10 @@
     "eslint-plugin-standard": "2.x.x",
     "lab": "11.0.x",
     "mock-require": "1.3.0",
-    "seneca": "plugin"
+    "seneca": "senecajs/seneca"
   },
   "pre-commit": [
-    "test",
-    "lint"
+    "test"
   ],
   "files": [
     "logentries.js",
