--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint-plugin-standard": "2.x.x",
     "lab": "11.0.x",
     "mock-require": "1.3.0",
-    "seneca": "plugin"
+    "seneca": "senecajs/seneca"
   },
   "pre-commit": [
     "test"
