--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "lab -v -P test -L -t 90",
     "coveralls": "lab -s -P test -r lcov | coveralls",
-    "coverage": "lab -v -P test -L -t 90 -r html > coverage.html",
+    "coverage": "lab -v -P test -L -t 90 -r html > docs/coverage.html",
     "annotate": "docco logentries.js -o docs/annotated"
   },
   "author": "David Gonzalez",
