--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "lab -v -P test -L -t 90",
     "coveralls": "lab -s -P test -r lcov | coveralls",
     "coverage": "lab -v -P test -L -t 90 -r html > docs/coverage.html",
-    "annotate": "docco logentries.js -o docs/annotated"
+    "annotate": "docco logentries.js -o docs/annotated",
+    "prettier": "prettier --write --no-semi --single-quote logentries.js test/*.js"
   },
   "author": "David Gonzalez",
   "license": "MIT",
@@ -33,11 +34,9 @@
     "eslint-plugin-standard": "2.x.x",
     "lab": "11.0.x",
     "mock-require": "1.3.0",
+    "prettier": "^1.10.2",
     "seneca": "plugin"
   },
-  "pre-commit": [
-    "test"
-  ],
   "files": [
     "logentries.js",
     "README.md",
